skeleton built with no css

--- a/index.html
+++ b/index.html
@@ -5,14 +5,62 @@
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 
 <head>
-  <meta charset="utf-8">
-  <title>Lighthouse Labs - Vancouver's Premier Ruby on Rails Developer Bootcamp</title>
-  <meta content='en' http-equiv='Content-Language'>
-
-  <link rel="stylesheet" href="/assets/style-d5959498043d621c8fb0119dd6825401.css">
-  <link rel="icon" type="image/ico" href="/assets/fav-91d8ac893b1e7d8180a8ab88aa202a25.ico"/>
+  <title>Khurram Virani - Fake - Resume</title>
+  <link rel="stylesheet" href="style.css">
+  <!--<link rel="icon" type="image/ico" href="/assets/fav-91d8ac893b1e7d8180a8ab88aa202a25.ico"/>-->
   
 </head>
 <body>
+  <div>
+    <h1>Khurram Virani</h1>
+  </div>
+  <div>
+    <img src="http://m.c.lnkd.licdn.com/media/p/3/005/00d/167/3c3bbb0.jpg" />
+  </div>
+  <div>
+    <h2>Work Experience</h2>
+    <div>
+      <div>
+        <h3>Head Instructor</h3>
+        <i>Lighthouse Labs</i>
+      </div>
+      <div>
+        October, 2013 - Current
+      </div>
+      <ul>
+        <li>Built the god damn curriculum</li>
+        <li>Taught students while ungrateful marketing co-founders played foosball</li>
+      </ul>
+    </div>
+  </div>
+    <div>
+      <div>
+        <h3>Lead Developer</h3>
+        <i>Functional Imperative</i>
+      </div>
+      <div>
+        Forever Ago - September, 2013
+      </div>
+      <ul>
+        <li>Lead a team of moderately capable developers</li>
+        <li>Built all the crap that Jake sold to our clients</li>
+      </ul>
+    </div>
+  <div>
+    <h2>Education</h2>
+    <div>
+      <div>
+        <h3>BComp, Bachelor of Computing Honours</h3>
+        <i>University of Guelph</i>
+      </div>
+      <div>
+        2002 - 2005
+      </div>
+      <ul>
+        <li>I studied stuff, it was easy</li>
+        <li>I also built stuff, it was awesome</li>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
