--- a/index_styled.html
+++ b/index_styled.html
@@ -11,58 +11,64 @@
   
 </head>
 <body>
-  <div>
+  <div id="container">
     <div>
       <h1>Khurram Virani</h1>
     </div>
     <div>
       <img src="http://m.c.lnkd.licdn.com/media/p/3/005/00d/167/3c3bbb0.jpg" />
     </div>
-    <div>
+    <div id="experience">
       <h2>Work Experience</h2>
       <div>
-        <div>
-          <h3>Head Instructor</h3>
+        <h3>Head Instructor</h3>
+        <div class="first-col">
           <i>Lighthouse Labs</i>
         </div>
-        <div>
+        <div class="second-col">
           October, 2013 - Current
         </div>
-        <ul>
-          <li>Built the god damn curriculum</li>
-          <li>Taught students while ungrateful marketing co-founders played foosball</li>
-        </ul>
+        <div class="details">
+          <ul>
+            <li>Built the god damn curriculum</li>
+            <li>Taught students while ungrateful marketing co-founders played foosball</li>
+          </ul>
+        </div>
       </div>
     </div>
       <div>
-        <div>
-          <h3>Lead Developer</h3>
+        <h3>Lead Developer</h3>
+        <div class="first-col">
           <i>Functional Imperative</i>
         </div>
-        <div>
+        <div class="second-col">
           Forever Ago - September, 2013
         </div>
-        <ul>
-          <li>Lead a team of moderately capable developers</li>
-          <li>Built all the crap that Jake sold to our clients</li>
-        </ul>
+        <div class="details">
+          <ul>
+            <li>Lead a team of moderately capable developers</li>
+            <li>Built all the crap that Jake sold to our clients</li>
+          </ul>
+        </div>
       </div>
     <div>
       <h2>Education</h2>
       <div>
-        <div>
-          <h3>BComp, Bachelor of Computing Honours</h3>
+        <h3>BComp, Bachelor of Computing Honours</h3>
+        <div class="first-col">
           <i>University of Guelph</i>
         </div>
-        <div>
+        <div class="second-col">
           2002 - 2005
         </div>
-        <ul>
-          <li>I studied stuff, it was easy</li>
-          <li>I also built stuff, it was awesome</li>
-        </ul>
+        <div class="details">
+          <ul>
+            <li>I studied stuff, it was easy</li>
+            <li>I also built stuff, it was awesome</li>
+          </ul>
+        </div>
       </div>
     </div>
-  <div>
+  </div>
 </body>
 </html>
