--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if IE 9 ]><html class="ie ie9" lang="en"> <![endif]-->
@@ -21,48 +22,54 @@
     <div>
       <h2>Work Experience</h2>
       <div>
+        <h3>Head Instructor</h3>
         <div>
-          <h3>Head Instructor</h3>
           <i>Lighthouse Labs</i>
         </div>
         <div>
           October, 2013 - Current
         </div>
-        <ul>
-          <li>Built the god damn curriculum</li>
-          <li>Taught students while ungrateful marketing co-founders played foosball</li>
-        </ul>
+        <div>
+          <ul>
+            <li>Built the god damn curriculum</li>
+            <li>Taught students while ungrateful marketing co-founders played foosball</li>
+          </ul>
+        </div>
       </div>
     </div>
       <div>
+        <h3>Lead Developer</h3>        
         <div>
-          <h3>Lead Developer</h3>
           <i>Functional Imperative</i>
         </div>
         <div>
           Forever Ago - September, 2013
         </div>
-        <ul>
-          <li>Lead a team of moderately capable developers</li>
-          <li>Built all the crap that Jake sold to our clients</li>
-        </ul>
+        <div>
+          <ul>
+            <li>Lead a team of moderately capable developers</li>
+            <li>Built all the crap that Jake sold to our clients</li>
+          </ul>
+        </div>
       </div>
     <div>
       <h2>Education</h2>
       <div>
+        <h3>BComp, Bachelor of Computing Honours</h3>        
         <div>
-          <h3>BComp, Bachelor of Computing Honours</h3>
           <i>University of Guelph</i>
         </div>
         <div>
           2002 - 2005
         </div>
-        <ul>
-          <li>I studied stuff, it was easy</li>
-          <li>I also built stuff, it was awesome</li>
-        </ul>
+        <div>
+          <ul>
+            <li>I studied stuff, it was easy</li>
+            <li>I also built stuff, it was awesome</li>
+          </ul>
+        </div>
       </div>
     </div>
-  <div>
+  </div>
 </body>
 </html>
