error correction in experience div

--- a/index_styled.html
+++ b/index_styled.html
@@ -35,7 +35,6 @@
           </ul>
         </div>
       </div>
-    </div>
       <div>
         <h3>Lead Developer</h3>
         <div class="first-col">
@@ -51,7 +50,8 @@
           </ul>
         </div>
       </div>
-    <div>
+    </div>
+    <div class="education">
       <h2>Education</h2>
       <div>
         <h3>BComp, Bachelor of Computing Honours</h3>
